@@ -8,13 +8,11 @@ MODULE_NAME = SessionTracker
 
 LOCAL_CLASSPATH = ../../lib/log.jar
 
-# EJBC_OPT = -keepgenerated
+EJBC_OPT = -keepgenerated
 
 INSTALL_DIR = ../../lib
 
-META_INF_RESOURCES = orion-ejb-jar.xml
-
-include $(SYS_MAKEFILE_DIR)/Jar.mk
+include $(SYS_MAKEFILE_DIR)/WebLogic.mk
 
 
 
