@@ -1,0 +1,90 @@
+<?xml version="1.0"?>
+<!DOCTYPE specification PUBLIC 
+	"-//Primix Solutions//Tapestry Specification 1.0//EN"
+	"http://tapestry.primix.com/dtd/Tapestry_1_0.dtd">
+<!-- $Id$ -->
+
+<specification>
+	<class>tests.tapestry.History</class>
+	
+	<components>
+		<component>
+			<id>border</id>
+			<type>Border</type>
+			
+			<bindings>
+				<static-binding>
+					<name>title</name>
+					<value>History</value>
+				</static-binding>
+			</bindings>
+		</component>
+
+        <component>
+                <id>e</id>
+                <type>Foreach</type>
+
+				<bindings>
+	                <binding>
+	                        <name>source</name>
+	                        <property-path>hits</property-path>
+	                </binding>
+
+	                <binding>
+	                        <name>value</name>
+	                        <property-path>hit</property-path>
+	                </binding>
+				</bindings>
+        </component>
+
+        <component>
+                <id>insertTime</id>
+                <type>Insert</type>
+				
+				<bindings>
+	                <binding>
+	                        <name>value</name>
+	                        <property-path>hit.requestDate</property-path>
+	                </binding>
+				</bindings>
+        </component>
+        
+        <component>
+                <id>insertServer</id>
+                <type>Insert</type>
+
+				<bindings>
+	                <binding>
+	                        <name>value</name>
+	                        <property-path>hit.serverName</property-path>
+	                </binding>
+				</bindings>
+        </component>
+        
+        <component>
+                <id>insertMethod</id>
+                <type>Insert</type>
+
+				<bindings>
+                <binding>
+                        <name>value</name>
+                        <property-path>hit.method</property-path>
+                </binding>
+				</bindings>
+        </component>
+        
+        
+        <component>
+                <id>insertURI</id>
+                <type>Insert</type>
+
+				<bindings>
+	                <binding>
+	                        <name>value</name>
+	                        <property-path>hit.URI</property-path>
+	                </binding>
+				</bindings>
+        </component>
+	</components>
+	
+</specification>
