@@ -5,7 +5,7 @@ uncompressed.
 <ul>
 	<li><a href="#application">application</a>
 	<jwc id="e-toc">
-		<li><a href="#<jwc id="insertPageName"/>"><jwc id="insertPageName"/></a>
+		<li><a href="#<jwc id="insertPageName1"/>"><jwc id="insertPageName2"/></a>
 	</jwc>
 </ul>
 
@@ -32,11 +32,11 @@ actual compression into SimpleApplication.
 	
 	<hr>
 	
-	<h3 id="<jwc id="insertPageName"/>">Page: <jwc id="insertPageName"/></h3>
+	<h3 id="<jwc id="insertPageName3"/>">Page: <jwc id="insertPageName4"/></h3>
 	
 	<pre><jwc id="serializedPageRecorder"/></pre>
 	
-	<h3>Page: <jwc id="insertPageName"/> (Compressed)</h3>
+	<h3>Page: <jwc id="insertPageName5"/> (Compressed)</h3>
 	
 	<pre><jwc id="compressedPageRecorder"/></pre>
 	</jwc>
