@@ -44,6 +44,6 @@
 Copyright 2000 Primix Solutions and released under the 
 <a target="gnu-copyleft" href="http://www.gnu.org/copyleft/lesser.html">Lesser GNU Public License</a>.
 
-<p><jwc id="showInspector"/>
+<jwc id="showInspector"/>
 </jwc>
 </html>
